discussion/kv_engine/158595/158595_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Remove StorageProperties::ConcurrentWriteCompact

It is set to Yes for all KVStores.

Change-Id: I4381316ef6f698b43704a6d5e051edeac7c9881a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-08-09 18:37:02.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-09 18:39:07.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38398/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38398/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32743/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32743/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/758/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/758/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/778/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11863/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11863/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12934/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12934/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13292/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13292/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12746/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12746/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20835/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20835/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11149/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2312:13: error: enumeration value "DiskFull" not handled in switch [clang-diagnostic-switch]
    switch (status.ErrorCode()) {
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11149/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2312:13:
error: enumeration value "DiskFull" not handled in switch [clang-diagnostic-switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11149/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9844/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
